# quetta-agents-mcp

./: .gitignore  README.md  install-service.ps1  install-task.ps1  install.ps1  install.sh  pyproject.toml  update.sh
.serena/: project.yml
docs/: 01-architecture.md  02-llm-routing.md  03-smart-dispatcher.md  04-remote-agent.md  05-paper-analysis.md  06-blueprint-analysis.md  07-upload-rag.md  08-tools-reference.md  09-configuration.md  10-operations.md  11-shared-memory.md  12-install-token.md  13-conversation-history.md  14-workspaces.md  15-auto-research-system-paper-ko.md  15-auto-research-system-paper.md  16-user-guide.md  README.md
hooks/: install-exo-mac.sh  install-mlx-distributed.sh  install-wg-mac-master.sh  quetta-session-push.ps1  quetta-session-push.sh
quetta_agents_mcp/: server.py
remote-agent/: agent.py  install.sh  requirements.txt
scripts/: build-docs-pdf.py
